--- a/index.html
+++ b/index.html
@@ -12,9 +12,11 @@
     <body>
         <header>
             <div class="container">
+                <div id = "logo">
+                    <img src="./img/jllogo.svg" alt="an svg" width="50px">
+                </div>
                 <div id = "branding">
                     <h1>Just Luck</h1>
-
                 </div>
                 <nav>
                     <ul>
