--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </nav>
             </div>
         </header>
-        <section id = "Hello">
+        <section id = "showcase">
             <div class="container">
                 <h1>This is good website</h1>
                 <p>Helo helo is this working? Idk if u can hear me or not but ineedhelp</p>
