changed showcase to gallery

--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html" class = "cool-link">Home</a></li>
-                        <li class="current"><a href="showcase.html" class = "coolcurrent-link">Showcase</a> </li>
+                        <li class="current"><a href="gallery.html" class = "coolcurrent-link">Gallery</a> </li>
                         <li><a href="resources.html" class = "cool-link">Resources</a> </li>
                     </ul>
                 </nav>
