--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav>
                     <ul>
                         <li class="current"><a href="index.html" class = "coolcurrent-link">Home</a></li>
-                        <li><a href="showcase.html" class = "cool-link">Showcase</a> </li>
+                        <li><a href="gallery.html" class = "cool-link">Gallery</a> </li>
                         <li><a href="resources.html" class = "cool-link">Resources</a> </li>
                     </ul>
                 </nav>
@@ -31,16 +31,15 @@
         </header>
         <section id = "showcase">
             <div class="container">
-                <h1 class="rainbow-text">Welcome to my website!</h1>
+                <h1 class="rainbow-text">What thee fuck is this??? OmG</h1>
             </div>
         </section>
 
         <section id="aboutme">
             <div class="container">
-                <h1>ABOUT ME</h1>
+                <h1><span>ABOUT ME</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam leo massa, viverra ut vulputate in, facilisis ac lorem. Nulla ex lectus, elementum a sagittis quis, sollicitudin et dui. Vestibulum congue, massa id ullamcorper accumsan, nibh augue facilisis est, id commodo mauris est sit amet ex. Suspendisse rhoncus justo vitae tempus euismod. Nam hendrerit elementum urna, eget imperdiet eros tristique in. Suspendisse potenti. Vestibulum vestibulum, orci et dictum cursus, neque mi varius ligula, vitae tristique purus dui nec arcu. Quisque suscipit leo eu hendrerit scelerisque. Nulla et elit mollis, rutrum quam a, consectetur neque. Curabitur porta lacus ac augue elementum vestibulum vitae accumsan eros. Donec vulputate tristique accumsan. Phasellus hendrerit in mauris at eleifend. Cras auctor dolor a ipsum cursus porttitor. Curabitur scelerisque nulla nunc, vitae sagittis urna bibendum non. Mauris non venenatis leo. Nunc at eros lacinia, tristique justo in, consectetur elit. Praesent neque magna, dictum nec elementum posuere, sollicitudin vitae risus. Pellentesque maximus aliquam pharetra. Interdum et malesuada fames ac ante ipsum primis in faucibus. In diam ipsum, pellentesque ut ligula id, tristique posuere sapien. Duis ipsum tellus, pellentesque ac feugiat nec, ullamcorper eu felis. Aliquam eleifend ultricies justo vitae dapibus. Duis gravida vitae enim vitae aliquam. Pellentesque sit amet finibus nibh. Aenean vitae vehicula augue, vestibulum efficitur ligula. Fusce nunc ipsum, convallis blandit augue ut, feugiat porta nisi. Morbi scelerisque ligula eget lacus euismod feugiat. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                <hr>
-                <h1>ABOUT ME (CONT.)</h1>
+                <h1><span>ABOUT ME (CONT.)</span></h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam leo massa, viverra ut vulputate in, facilisis ac lorem. Nulla ex lectus, elementum a sagittis quis, sollicitudin et dui. Vestibulum congue, massa id ullamcorper accumsan, nibh augue facilisis est, id commodo mauris est sit amet ex. Suspendisse rhoncus justo vitae tempus euismod. Nam hendrerit elementum urna, eget imperdiet eros tristique in. Suspendisse potenti. Vestibulum vestibulum, orci et dictum cursus, neque mi varius ligula, vitae tristique purus dui nec arcu. Quisque suscipit leo eu hendrerit scelerisque. Nulla et elit mollis, rutrum quam a, consectetur neque. Curabitur porta lacus ac augue elementum vestibulum vitae accumsan eros. Donec vulputate tristique accumsan. Phasellus hendrerit in mauris at eleifend. Cras auctor dolor a ipsum cursus porttitor. Curabitur scelerisque nulla nunc, vitae sagittis urna bibendum non. Mauris non venenatis leo. Nunc at eros lacinia, tristique justo in, consectetur elit. Praesent neque magna, dictum nec elementum posuere, sollicitudin vitae risus. Pellentesque maximus aliquam pharetra. Interdum et malesuada fames ac ante ipsum primis in faucibus. In diam ipsum, pellentesque ut ligula id, tristique posuere sapien. Duis ipsum tellus, pellentesque ac feugiat nec, ullamcorper eu felis. Aliquam eleifend ultricies justo vitae dapibus. Duis gravida vitae enim vitae aliquam. Pellentesque sit amet finibus nibh. Aenean vitae vehicula augue, vestibulum efficitur ligula. Fusce nunc ipsum, convallis blandit augue ut, feugiat porta nisi. Morbi scelerisque ligula eget lacus euismod feugiat. Suspendisse potenti. Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                 <hr>
             </div>
